# LexGuard

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml
data/: README.md
data/cedula_co/prod/: produc_cedulas.txt  test_cedulas.csv  test_cedulas.sql
data/cedula_co/test/: test_cedulas.json  test_cedulas.sql  test_cedulas.txt
data/credit_card/prod/: produc_data.txt
data/cross-pii/: critical_exposure.txt  multi_pii.txt
data/ejemplo/: example.csv  example.json  example.sql  example.txt  prod_data.txt
data/email/produc/: test_emails.csv
data/email/test/: test_emails.json  test_emails.sql  test_emails.txt
data/nit_co/prod/: test_nit.json
data/nit_co/test/: test_nit.csv  test_nit.sql  test_nit.txt
data/phone_co/produc/: test_phones.csv
data/phone_co/test/: test_phones.json  test_phones.sql  test_phones.txt
data/produc/: test_cards.csv
data/test/: test_cards.json  test_cards.sql
lexguard/: __init__.py
lexguard/ai/: __init__.py  classifier.py  prompt.py  result.py
lexguard/core/: __init__.py  scanner.py
lexguard/core/ingestion/: __init__.py  file_stream.py
lexguard/core/reporting/: __init__.py  json_report.py  (+1 more)
lexguard/interfaces/: __init__.py
scripts/: test_ai_integration.py
tests/: __init__.py  test_ai_classifier.py  test_cedula_co.py  test_confidence.py  test_credit_card_rule.py  test_cross_pii.py  test_email.py  test_file_stream.py  test_luhn.py  test_nit_co.py  test_phone_co.py  test_risk.py
(+18 files in other folders)
